// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Data Structure Snapshots > Actress Mapping > matches full actress snapshot 1`] = `
{
  "aiReview": undefined,
  "aiReviewUpdatedAt": undefined,
  "aliases": [
    "別名1",
    "別名2",
  ],
  "catchcopy": "",
  "description": "詳細なプロフィール情報",
  "heroImage": "https://example.com/thumb.jpg",
  "highlightWorks": [],
  "id": "12345",
  "metrics": {
    "fanScore": 0,
    "releaseCount": 150,
    "trendingScore": 0,
  },
  "name": "フル情報テスト女優",
  "primaryGenres": [
    "premium",
  ],
  "services": [
    "fanza",
    "mgs",
    "duga",
  ],
  "tags": [],
  "thumbnail": "https://example.com/thumb.jpg",
}
`;

exports[`Data Structure Snapshots > Actress Mapping > matches minimal actress snapshot 1`] = `
{
  "aiReview": undefined,
  "aiReviewUpdatedAt": undefined,
  "aliases": undefined,
  "catchcopy": "",
  "description": undefined,
  "heroImage": "https://placehold.co/400x520/1f2937/ffffff?text=NO+IMAGE",
  "highlightWorks": [],
  "id": "1",
  "metrics": {
    "fanScore": 0,
    "releaseCount": 0,
    "trendingScore": 0,
  },
  "name": "テスト女優",
  "primaryGenres": [
    "premium",
  ],
  "services": [],
  "tags": [],
  "thumbnail": "https://placehold.co/400x520/1f2937/ffffff?text=NO+IMAGE",
}
`;

exports[`Data Structure Snapshots > Product Mapping > matches full product snapshot 1`] = `
{
  "actressId": "1",
  "actressName": "女優A",
  "affiliateUrl": "https://affiliate.example.com/product/12345",
  "aiReview": undefined,
  "aiReviewUpdatedAt": undefined,
  "category": "premium",
  "ctaLabel": undefined,
  "currency": "JPY",
  "description": "作品の詳細説明テキスト",
  "discount": 50,
  "duration": 120,
  "format": undefined,
  "id": "12345",
  "imageUrl": "https://example.com/thumb.jpg",
  "isFeatured": false,
  "isFuture": false,
  "isNew": false,
  "makerProductCode": "SSIS-001",
  "normalizedProductId": "ssis001",
  "originalProductId": "ssis00001",
  "performers": [
    {
      "id": "1",
      "name": "女優A",
    },
    {
      "id": "2",
      "name": "女優B",
    },
  ],
  "price": 1980,
  "productType": "haishin",
  "provider": "fanza",
  "providerLabel": "FANZA",
  "rating": undefined,
  "regularPrice": 1980,
  "releaseDate": "2024-01-15",
  "reviewCount": undefined,
  "reviewHighlight": undefined,
  "saleEndAt": "2024-06-15T00:00:00.000Z",
  "salePrice": 980,
  "sampleImages": [
    "https://example.com/img1.jpg",
    "https://example.com/img2.jpg",
  ],
  "sampleVideos": [
    {
      "duration": 60,
      "quality": "HD",
      "type": "sample",
      "url": "https://example.com/sample.mp4",
    },
  ],
  "tags": [
    "巨乳",
    "美脚",
    "OL",
  ],
  "title": "フル情報テスト作品",
}
`;

exports[`Data Structure Snapshots > Product Mapping > matches minimal product snapshot 1`] = `
{
  "actressId": undefined,
  "actressName": undefined,
  "affiliateUrl": "",
  "aiReview": undefined,
  "aiReviewUpdatedAt": undefined,
  "category": "premium",
  "ctaLabel": undefined,
  "currency": "JPY",
  "description": undefined,
  "discount": undefined,
  "duration": undefined,
  "format": undefined,
  "id": "1",
  "imageUrl": "https://placehold.co/600x800/1f2937/ffffff?text=NO+IMAGE",
  "isFeatured": false,
  "isFuture": false,
  "isNew": false,
  "makerProductCode": undefined,
  "normalizedProductId": undefined,
  "originalProductId": undefined,
  "performers": undefined,
  "price": 0,
  "productType": undefined,
  "provider": "duga",
  "providerLabel": "DUGA",
  "rating": undefined,
  "regularPrice": undefined,
  "releaseDate": undefined,
  "reviewCount": undefined,
  "reviewHighlight": undefined,
  "saleEndAt": undefined,
  "salePrice": undefined,
  "sampleImages": undefined,
  "sampleVideos": undefined,
  "tags": [],
  "title": "テスト作品",
}
`;

exports[`Data Structure Snapshots > Utility Output Snapshots > ASP normalization map snapshot 1`] = `
{
  "DTI_URL_PATTERNS": {
    "10musume.com": "10musume",
    "1pondo.tv": "1pondo",
    "av9898.com": "av9898",
    "caribbeancom.com": "caribbeancom",
    "caribbeancompr.com": "caribbeancompr",
    "enkou55.com": "enkou55",
    "heydouga.com": "heydouga",
    "heyzo.com": "heyzo",
    "honnamatv.com": "honnamatv",
    "muramura.tv": "muramura",
    "pacopacomama.com": "pacopacomama",
    "tokyo-hot.com": "tokyohot",
    "tvdeav": "tvdeav",
    "urekko": "urekko",
    "x1x.com": "x1x",
  },
  "JA_TO_EN_MAP": {
    "Tokyo Hot": "tokyohot",
    "カリビアンコム": "caribbeancom",
    "カリビアンコムPR": "caribbeancompr",
    "カリビアンコムプレミアム": "caribbeancompr",
    "トウキョウホット": "tokyohot",
    "パコパコママ": "pacopacomama",
    "ムラムラ": "muramura",
    "ムラムラってくる素人": "muramura",
    "一本道": "1pondo",
    "天然むすめ": "10musume",
  },
  "UPPER_TO_LOWER_MAP": {
    "10MUSUME": "10musume",
    "1PONDO": "1pondo",
    "CARIBBEANCOM": "caribbeancom",
    "CARIBBEANCOMPR": "caribbeancompr",
    "DTI": "dti",
    "DUGA": "duga",
    "ENKOU55": "enkou55",
    "FANZA": "fanza",
    "FC2": "fc2",
    "HEYDOUGA": "heydouga",
    "HEYZO": "heyzo",
    "JAPANSKA": "japanska",
    "Japanska": "japanska",
    "MGS": "mgs",
    "MURAMURA": "muramura",
    "PACOPACOMAMA": "pacopacomama",
    "SOKMIL": "sokmil",
    "TOKYOHOT": "tokyohot",
    "TVDEAV": "tvdeav",
    "UREKKO": "urekko",
    "X1X": "x1x",
  },
}
`;

exports[`Data Structure Snapshots > Utility Output Snapshots > Product ID variations snapshot 1`] = `
{
  "dti": [
    "123456-01",
    "12345601",
    "123456_01",
  ],
  "fanza": [
    "FANZA-mide00001",
    "MIDE-00001",
    "MIDE-001",
    "MIDE-1",
    "MIDE00001",
    "MIDE001",
    "MIDE1",
    "fanza-mide00001",
    "mide-00001",
    "mide-001",
    "mide-1",
    "mide00001",
    "mide001",
    "mide1",
  ],
  "mgs": [
    "259LUXU-1234",
    "259LUXU1234",
    "259luxu-1234",
    "259luxu1234",
  ],
  "standard": [
    "MIDE-00001",
    "MIDE-001",
    "MIDE-1",
    "MIDE00001",
    "MIDE001",
    "MIDE1",
    "mide-00001",
    "mide-001",
    "mide-1",
    "mide00001",
    "mide001",
    "mide1",
  ],
}
`;
